feat: Update app name and description
Renames the application from "To My Love - A Valentine's Special" to "For Kaye" and updates the description to "I love you." This aligns the project with its new intended purpose.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-my-love---a-valentine's-special",
+  "name": "for-kaye",
   "private": true,
   "version": "0.0.0",
   "type": "module",
